src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__cst_directives__snapshot_computed.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    IDENT "computed"
    ARG "total"
    ARG_LIST
      L_PAREN "("
      ARG
        VARIABLE_REF "$a"
      COMMA ","
      ARG
        VARIABLE_REF "$b"
      R_PAREN ")"
    BODY
      L_BRACE "{"
      VARIABLE_REF "$a"
      PLUS "+"
      VARIABLE_REF "$b"
      R_BRACE "}"
  EOF ""
