src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__cst_directives__snapshot_data_source.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    IDENT "data"
    ARG "users"
    ARG "from"
    ARG ""/api/users""
  EOF ""
