src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__cst_directives__snapshot_each_iteration.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    IDENT "each"
    ARG
      VARIABLE_REF "$item"
    ARG "in"
    ARG
      VARIABLE_REF "$items"
    BODY
      L_BRACE "{"
      SCOPE_BLOCK
        SELECTOR
          SELECTOR_PART ".card"
        BODY "{ }"
      R_BRACE "}"
  EOF ""
