src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__cst_directives__snapshot_fn_def.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    IDENT "fn"
    ARG "greet"
    ARG_LIST
      L_PAREN "("
      ARG
        VARIABLE_REF "$name"
      R_PAREN ")"
    BODY
      L_BRACE "{"
      STRING "\"Hello, \""
      PLUS "+"
      VARIABLE_REF "$name"
      R_BRACE "}"
  EOF ""
