src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__cst_directives__snapshot_let_binding.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  VARIABLE_REF "$count number: 0;"
  EOF ""
