src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__cst_directives__snapshot_load_animation.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    IDENT "load"
    ARG_LIST
      L_PAREN "("
      ARG "0.5s"
      R_PAREN ")"
    BODY
      L_BRACE "{"
      CSS_PROPERTY
        IDENT "opacity"
        COLON ":"
        CSS_VALUE "0 -> 1"
        SEMICOLON ";"
      CSS_PROPERTY
        IDENT "transform"
        COLON ":"
        CSS_VALUE
          IDENT "translateY"
          ARG_LIST
            L_PAREN "("
            ARG "20px"
            R_PAREN ")"
          ARROW "->"
          IDENT "translateY"
          ARG_LIST
            L_PAREN "("
            ARG "0"
            R_PAREN ")"
        SEMICOLON ";"
      R_BRACE "}"
  EOF ""
