src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__cst_directives__snapshot_loop_animation.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    IDENT "loop"
    ARG_LIST
      L_PAREN "("
      ARG "2s"
      R_PAREN ")"
    BODY
      L_BRACE "{"
      CSS_PROPERTY
        IDENT "opacity"
        COLON ":"
        CSS_VALUE "0 -> 1 -> 0"
        SEMICOLON ";"
      R_BRACE "}"
  EOF ""
