src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__cst_directives__snapshot_on_click_with_args.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    KW_ON "on"
    ARG
      ELEMENT_REF "&.click"
    ARG_LIST
      L_PAREN "("
      ARG "0.3s"
      R_PAREN ")"
    BODY
      L_BRACE "{"
      CSS_PROPERTY
        IDENT "scale"
        COLON ":"
        CSS_VALUE "0.95 -> 1"
        SEMICOLON ";"
      R_BRACE "}"
  EOF ""
