src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__cst_directives__snapshot_on_hover.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    KW_ON "on"
    ARG
      ELEMENT_REF "&.hover"
    BODY
      L_BRACE "{"
      CSS_PROPERTY
        IDENT "opacity"
        COLON ":"
        CSS_VALUE "0 -> 1"
        SEMICOLON ";"
      R_BRACE "}"
  EOF ""
