src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__cst_directives__snapshot_scroll_progress.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    IDENT "scroll"
    ARG "page-progress"
    BODY
      L_BRACE "{"
      CSS_PROPERTY
        IDENT "opacity"
        COLON ":"
        CSS_VALUE "0 -> 1"
        SEMICOLON ";"
      R_BRACE "}"
  EOF ""
