src/syntax/events/snapshots/spacetime__syntax__events__baseline_tests__cst_directives__snapshot_type_def.snap
---
source: src/syntax/events/baseline_tests.rs
expression: cst
---
ROOT
  DIRECTIVE
    AT_SIGN "@"
    IDENT "type"
    ARG "User"
    BODY
      L_BRACE "{"
      CSS_PROPERTY
        IDENT "id"
        COLON ":"
        CSS_VALUE "number"
        SEMICOLON ";"
      CSS_PROPERTY
        IDENT "name"
        COLON ":"
        CSS_VALUE "string"
        SEMICOLON ";"
      R_BRACE "}"
  EOF ""
